package gestorenvios.models.exceptions;

public class ActualizacionEntityException extends RuntimeException {
    public ActualizacionEntityException(String message) {
        super(message);
    }
}
