package gestorenvios.models.exceptions;

public class ConsultaEntityException extends RuntimeException {
    public ConsultaEntityException(String message) {
        super(message);
    }
}
