package gestorenvios.models.exceptions;

public class CreacionEntityException extends RuntimeException {
    public CreacionEntityException(String message) {
        super(message);
    }
}
