package gestorenvios.models.exceptions;

public class EliminacionEntityException extends RuntimeException {
    public EliminacionEntityException(String message) {
        super(message);
    }
}
